override native navigation to avoid layout bugs

--- a/src/styles/_tabs.scss
+++ b/src/styles/_tabs.scss
@@ -3,14 +3,17 @@
   width: 100vw;
   display: flex;
   justify-content: space-between;
-  padding: 0.5rem 2rem;
   box-sizing: border-box;
-  align-items: center;
+  align-items: stretch;
   background-color: $text-color-dark;
 
   a {
     text-decoration: none;
     color: $text-color-light;
+    flex: 1;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
     &.active {
       color: $color-primary;
     }
