--- a/src/styles/_toolbar.scss
+++ b/src/styles/_toolbar.scss
@@ -1,5 +1,5 @@
 #toolbar {
-  padding: 0.5rem 2rem;
+  padding: 0.5rem 1rem;
   background-color: $color-primary;
   color: $bg-color-light;
   display: flex;
