--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -3,5 +3,5 @@ $text-color-light: #efefef;
 $bg-color-light: #fff;
 $color-primary: #00a97a;
 $font-body: 400 1rem helvetica, sans-serif;
-$toolbar-height: 3rem;
-$tabs-height: 3rem;
+$toolbar-height: 4rem;
+$tabs-height: 4rem;
